<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"

    tools:context=".activities.ForgotPin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white2"
        android:orientation="vertical">

        <TextView
            android:textSize="@dimen/size_28"
            android:textColor="@color/grey2"
            android:layout_width="match_parent"
            android:gravity="center"
            android:fontFamily="@font/latoregular"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/size_20"
            android:layout_marginLeft="@dimen/size_20"
            android:layout_marginTop="@dimen/size_50"
            android:layout_marginBottom="@dimen/size_10"
            android:text="@string/forgotpin" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enteruremail"
            android:background="@drawable/btn_bg"
            android:padding="@dimen/size_14"
            android:layout_marginRight="@dimen/size_30"
            android:layout_marginLeft="@dimen/size_30"
            android:layout_marginTop="@dimen/size_20"
            android:fontFamily="@font/latoregular"
            android:textColor="@color/lightgrey2"
            android:inputType="text"
            android:textColorHint="@color/lightgrey2"
            />
        <TextView
            android:id="@+id/tv_send"
            android:textSize="@dimen/size_14"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:gravity="center"
            android:padding="@dimen/size_14"
            android:background="@drawable/grey_roundedbg"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/size_30"
            android:fontFamily="@font/latoregular"
            android:layout_marginLeft="@dimen/size_30"
            android:layout_marginTop="@dimen/size_40"
            android:textStyle="bold"
            android:text="@string/send"
            />

    </LinearLayout>

</LinearLayout>